# 3-25HS.W-B-WI-GrPro_morse-code-converter

./: .env  .gitignore  README-template.md  README.md  gui.html  gui.py  main.py  morse_chat.db  morse_code_readme.md  morse_history.json  pyproject.toml
app/: database.py  main.py
app/db/: database_manager.py
app/db/models/: chat.py  message.py  user.py
app/models/: chat.py  message.py
app/services/: __init__.py  chat_service.py  file_upload_service.py  morse_converter.py  user_manager.py
app/ui/: __init__.py  app_layout.py  chat_view.py  message_bubble.py  sidebar.py  styles.py  view_manager.py
tests/: test_db.py  test_e2e.py  test_integration.py  test_unit.py
ui/: message_bubble.py
