[project]
name = "3-25hs-w-b-wi-grpro-morse-coder"
version = "0.2.0"
description = "Browser-based Morse Code chat converter (NiceGUI + SQLAlchemy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.uv]
package = false
